# Maya2glTF

./: .travis.yml  CMakeLists.txt  macos_build_plugin.sh  osx_create_project.sh  version.inl.in  version.mel.in
maya/icons/: maya2gltfGodotEnginePreset.xpm
maya/scripts/: maya2glTF_UI.mel  maya2glTF_UI_GodotEngine.mel
maya/shelves/: shelf_maya2gltf_godot_engine_preset.mel
modules/: FindMaya.cmake
